atualizacao da imagem do UX Collective

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -488,7 +488,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://brasil.uxdesign.cc/meu-checklist-de-tarefas-para-um-teste-de-usabilidade-2c5e552ce259" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/982990409453334529/Mrnz3KJ6_400x400.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/30443040_10156205485194471_8154900686011494256_n.png?_nc_cat=0&oh=8409e0956e5c7aeb80da029fa45ec89c&oe=5C320310" alt="#" />
           </a>
         </div>
         <div class="resource-details">
