atualizacao da imagem do Designmodo

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -503,7 +503,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://designmodo.com/repeat-grid-adobe-xd/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/985889277652455425/llwBE2xU_400x400.jpg" alt="#" />
+            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/ead8a8c8d47b09c187812f43d48dbf23/5C1B9767/t51.2885-19/s150x150/30077987_166101170684271_2785374630343344128_n.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
