atualizacao da imagem do collect ui

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -522,7 +522,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="http://collectui.com/#" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/804612529003626496/GO8zVitU_400x400.jpg" alt="#" />
+            <img src="https://miro.medium.com/fit/c/240/240/1*L8PQAaCryNjy4KXWrGKldQ.png" alt="#" />
           </a>
         </div>
         <div class="resource-details">
