atualizacao das imagens UI Pattern e IDF

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -582,7 +582,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="http://www.uipatternhub.com/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/1027984508232978432/zHnV1u14_400x400.jpg" alt="#" />
+            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/e710896e3f397b677f2a76aada76d892/5C0120B0/t51.2885-19/s150x150/38066231_515977582191254_7295962719260246016_n.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -597,7 +597,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/996054287984848900/hdyiM8n1_400x400.jpg" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/603766_10154064704532228_356610347946095927_n.png?_nc_cat=1&oh=48674731647fc441e5d8cc2a25378d9a&oe=5C3A72CC" alt="#" />
           </a>
         </div>
         <div class="resource-details">
