atualizacao de imagens do Magic Mockups, Place it e make a gif

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1288,7 +1288,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://magicmockups.com/" target="_blank">
-						<img src="https://pbs.twimg.com/profile_images/535111935516106755/kXUDiI6G_400x400.jpeg" alt="Retro Vectors" />
+						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/1460232_391903500958822_1980225346117260656_n.jpg?_nc_cat=0&oh=293fd2b584ebfd761f1f091e46151819&oe=5C3B600D" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1302,7 +1302,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://placeit.net/" target="_blank">
-						<img src="https://pbs.twimg.com/profile_images/956228753004281856/m8sPSHUV_200x200.jpg" alt="Retro Vectors" />
+						<img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/82e7796b9c15afe0f2243e3e870df09b/5C384092/t51.2885-19/s150x150/26865006_1971029873114725_810363597501759488_n.jpg" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1668,7 +1668,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://makeagif.com/" target="_blank">
-						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/22490110_1488136587902126_5060219529388402680_n.png?oh=ebbd3c74c716bbe7273f5a1aaa117b46&oe=5A802F65" alt="Retro Vectors" />
+						<img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=0&oh=f3901a8ec8f8855e65cccd8fbd7d1cd3&oe=5C333E65" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
