link do Monster List of UX Books

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -608,21 +608,22 @@ and share your amazing creations in a matter of minutes.</p>
         </div>
         <a class="resource-button" href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">Veja</a>
       </li>
-<!-- 
+
       <li>
         <div class="resource-icon">
-          <a href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/996054287984848900/hdyiM8n1_400x400.jpg" alt="#" />
+          <a href="https://airtable.com/universe/expqM3OWZoJkjl7wy/monster-list-of-ux-books?explore=true" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
           <h2>
-            <a href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">10 Great Sites for UI Design Patterns</a>
+            <a href="https://airtable.com/universe/expqM3OWZoJkjl7wy/monster-list-of-ux-books?explore=true" target="_blank">Monster List of UX Books
+            </a>
           </h2>
-          <p>Patterns</p>
+          <p>Lista de livros de UX</p>
         </div>
-        <a class="resource-button" href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">Veja</a>
-      </li> -->
+        <a class="resource-button" href="https://airtable.com/universe/expqM3OWZoJkjl7wy/monster-list-of-ux-books?explore=true" target="_blank">Veja</a>
+      </li>
       
      
 
