--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -404,7 +404,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://bulma.io/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/690988958860316672/xFkgPktt_400x400.png" alt="#" />
+            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p320x320/17343016_1818273475162988_5315322429022442024_n.png?_nc_cat=0&oh=7ca79f7b4b1747e2dced21e0789776df&oe=5C335335" alt="#" />
           </a>
         </div>
         <div class="resource-details">
