--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -951,6 +951,21 @@
       
       <li>
         <div class="resource-icon">
+          <a href="https://git-scm.com/docs" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://git-scm.com/docs" target="_blank">Documentação GIT</a>
+          </h2>
+          <p>Resources to <mark><a href="http://try.github.io/" target="_blank">Learn</a></mark></p>
+        </div>
+        <a class="resource-button" href="https://git-scm.com/docs" target="_blank">Veja</a>
+      </li>
+      
+      <li>
+        <div class="resource-icon">
           <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank">
             <img src="https://pbs.twimg.com/profile_images/446356636710363136/OYIaJ1KK_400x400.png" alt="#" />
           </a>
