link da documentação do canvas

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -839,7 +839,7 @@
           <h2>
             <a href="http://jstherightway.org/" target="_blank">Javascript The Right Way</a>
           </h2>
-          <p>Apoio em Javascript</p>
+          <p>Apoio em Javascript | <a href="https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D" target="_blank"><mark>Canvas</mark></a></p>
         </div>
         <a class="resource-button" href="http://jstherightway.org/" target="_blank">Veja</a>
       </li>
