Artigo do Medium Roadmap Web Developer

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1039,7 +1039,7 @@
           <h2>
             <a href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">Road Map Web Developer</a>
           </h2>
-          <p>Web developer in 2018</p>
+          <p>Web developer in 2018 | <a href="https://codeburst.io/the-2018-web-developer-roadmap-826b1b806e8d" target="_blank"><mark>Artigo Medium</mark></a></p>
         </div>
         <a class="resource-button" href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">Veja</a>
       </li>
