--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1740,6 +1740,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://internetingishard.com/" target="_blank">
+            <img src="https://internetingishard.com/img/interneting-is-hard-logo-97b225.svg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://internetingishard.com/" target="_blank">Interneting is Hard</a>
+          </h2>
+          <p>Learning Code</p>
+        </div>
+        <a class="resource-button" href="https://internetingishard.com/" target="_blank">Veja</a>   
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://css-animations.io/" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
