atualizacao da imagem do skeleton

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -344,7 +344,7 @@
       <li>
         <div class="resource-icon">
           <a href="http://getskeleton.com/" target="_blank">
-            <img src="http://getskeleton.com/images/feather.svg" alt="#" />
+            <img src="../../base/images/skeleton.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
