link do site coolhue

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -303,7 +303,6 @@
 					<p>Combinações de fontes</p>
 				</div>
 				<a class="resource-button" href="https://www.canva.com/font-combinations/" target="_blank">Veja</a>
-				<div id="cores"></div>
 			</li>
 
 			<li>
@@ -317,7 +316,6 @@
 					<p>Combinações de fontes</p>
 				</div>
 				<a class="resource-button" href="https://betterwebtype.com/combining-fonts-guide" target="_blank">Veja</a>
-				<div id="cores"></div>
 			</li>
 
 			<li>
@@ -331,7 +329,6 @@
 					<p>Web fonts &amp; e download</p>
 				</div>
 				<a class="resource-button" href="http://www.cufonfonts.com/font/bariol-regular-2" target="_blank">Veja</a>
-				<div id="cores"></div>
 			</li>
 
 			<li>
@@ -636,6 +633,19 @@
 					<p>Gradients for web</p>
 				</div>
 				<a class="resource-button" href="https://uigradients.com" target="_blank">Veja</a>
+			</li>
+
+			<li>
+				<div class="resource-icon">
+					<a href="https://webkul.github.io/coolhue/" target="_blank">
+						<img src="https://webkul.github.io/coolhue/images/coolhue-logo.png" alt="#" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://webkul.github.io/coolhue/" target="_blank">CoolHue</a> </h2>
+					<p>Gradients for web</p>
+				</div>
+				<a class="resource-button" href="https://webkul.github.io/coolhue/" target="_blank">Veja</a>
 			</li>
 
 			<li>
