--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -510,6 +510,21 @@
         </div>
         <a class="resource-button" href="https://shakrmedia.github.io/tuesday/" target="_blank">Veja</a>
   		</li>
+        
+      <li>
+        <div class="resource-icon">
+          <a href="http://mojs.io/" target="_blank">
+            <img src="https://cdn.dribbble.com/users/132296/avatars/small/a9d91d79112ba4d8c1c651c7f2c8e084.png?1427551064" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://mojs.io/" target="_blank">Mo.js</a>
+          </h2>
+          <p>A Complete Motion Graphics Library For The Web</p>
+        </div>
+        <a class="resource-button" href="http://mojs.io/" target="_blank">Veja</a>
+  		</li>
   
       <li>
         <div class="resource-icon">
