link do tutorial de configuracao de sangria e margem de seguranca

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -294,6 +294,21 @@
         <a class="resource-button" href="http://waltermattos.com/tutoriais/simetria-e-replicas-automaticas-no-illustrator/" target="_blank">Veja</a>
 		  </li>
 
+		  <li>
+        <div class="resource-icon">
+          <a href="https://clube.design/2014/configurando-sangria-e-margem-de-seguranca-illustrator-indesign-photoshop-e-coreldraw/?utm_source=ReviveOldPost&utm_medium=social&utm_campaign=ReviveOldPost" target="_blank">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/16729032_1187196768015149_277613555798987253_n.png?_nc_cat=0&oh=969c844a71e1478ed650ab9462198750&oe=5BEEAF1B" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://clube.design/2014/configurando-sangria-e-margem-de-seguranca-illustrator-indesign-photoshop-e-coreldraw/?utm_source=ReviveOldPost&utm_medium=social&utm_campaign=ReviveOldPost" target="_blank">Configurando sangria e margem de segurança</a>
+          </h2>
+          <p>Configurando sangria e margem de segurança no Illustrator, Indesign, Photoshop e CorelDRAW</p>
+        </div>
+        <a class="resource-button" href="https://clube.design/2014/configurando-sangria-e-margem-de-seguranca-illustrator-indesign-photoshop-e-coreldraw/?utm_source=ReviveOldPost&utm_medium=social&utm_campaign=ReviveOldPost" target="_blank">Veja</a>
+		  </li>
+
 	  	<li>
         <div class="resource-icon">
           <a href="http://www.dicasdogreb.com.br/capa-para-fanpage-no-facebook/" target="_blank">
