--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -246,6 +246,21 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://marvelapp.com/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://maze.design/" target="_blank">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/31165840_355665734925368_3369729425162633216_n.png?_nc_cat=0&oh=52ffb39af049df878e0e1885e37bc8a5&oe=5C1DFB9E" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://maze.design/" target="_blank">Maze</a>
+          </h2>
+          <p>Analytics for prototypes | outra alternativa <a href="https://www.quant-ux.com" target="_blank"><mark>Quant-UX</mark></a></p>
+        </div>
+        <a class="resource-button" href="https://maze.design/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Blogs Nacionais</h2>
       <div class="linha"></div>
