link de documentários

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -398,6 +398,21 @@
         </div>
         <a class="resource-button" href="https://www.pantone.com/" target="_blank">Veja</a>
 		  </li>
+        
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.monkeybusiness.com.br/blog/11-documentarios-sobre-design" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.monkeybusiness.com.br/blog/11-documentarios-sobre-design" target="_blank">11 Documentários sobre Design que você deveria assistir</a>
+          </h2>
+          <p>Monkey Business</p>
+        </div>
+        <a class="resource-button" href="https://www.monkeybusiness.com.br/blog/11-documentarios-sobre-design" target="_blank">Veja</a>
+		  </li>
       
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Estudo</h2>
