--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -178,6 +178,22 @@
         <div id="css"></div>
       </li> 
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://thinker3197.github.io/progressively/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://thinker3197.github.io/progressively/" target="_blank">Progressively</a>
+          </h2>
+          <p>A JavaScript library to load images progressively</p>
+        </div>
+        <a class="resource-button" href="https://thinker3197.github.io/progressively/" target="_blank">Veja</a>
+        <div id="css"></div>
+      </li> 
+
       <div class="linha"></div>        
       <h2 class="margen-titulo color-frontend">CSS</h2>
       <div class="linha"></div>      
