link Collection of identity style guides from around the world

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -462,6 +462,21 @@
         </div>
         <a class="resource-button" href="https://designcomcafe.com.br/manuais-de-identidade-visual-para-se-inspirar/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.logodesignlove.com/brand-identity-style-guides" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.logodesignlove.com/brand-identity-style-guides" target="_blank">A collection of identity style guides from around the world</a>
+          </h2>
+          <p>Logo Design Love</p>
+        </div>
+        <a class="resource-button" href="https://www.logodesignlove.com/brand-identity-style-guides" target="_blank">Veja</a>
+      </li>
     
       <li>
         <div class="resource-icon">
