troca do link da biblioteca

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1827,7 +1827,7 @@
 
 <a id="back-to-top" href="#" class="visible"> <i class="fa fa-angle-up"></i> </a>
 <footer> </footer>
-<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="../../ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
 
 				jQuery(document).ready(function($) {
