blogs sobre marketing

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -207,6 +207,21 @@
       <a class="resource-button" href="https://automacaodevendas.com/" target="_blank">Veja</a>
     </li>
 
+    <li>
+      <div class="resource-icon">
+        <a href="https://marketingdeconteudo.com/blogs-sobre-marketing/?utm_content=77161851&utm_medium=social&utm_source=twitter" target="_blank">
+          <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/36931364_1036299226533351_7053254834622824448_n.png?_nc_cat=0&oh=b8f4b84e37164c30d6a1134383c8156a&oe=5C198268" alt="#" />
+        </a>
+      </div>
+      <div class="resource-details">
+        <h2>
+          <a href="https://marketingdeconteudo.com/blogs-sobre-marketing/?utm_content=77161851&utm_medium=social&utm_source=twitter" target="_blank">37 blogs sobre Marketing que você precisa acompanhar!</a>
+        </h2>
+        <p>Blog Marketing de Conteúdo</p>
+      </div>
+      <a class="resource-button" href="https://marketingdeconteudo.com/blogs-sobre-marketing/?utm_content=77161851&utm_medium=social&utm_source=twitter" target="_blank">Veja</a>
+    </li>
+
     <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Estudo</h2>        
     <div class="linha"></div>
@@ -247,7 +262,7 @@
 
       <li>
         <div class="resource-icon">
-          <a href="https://br.mautic.org" target="_blank" bgcolor="#000">
+          <a href="https://br.mautic.org" target="_blank">
             <img src="https://pbs.twimg.com/profile_images/918197078081159169/Cv9FgWXU_400x400.jpg" alt="#" />
           </a>
         </div>
@@ -262,7 +277,7 @@
 
       <li>
         <div class="resource-icon">
-          <a href="https://mailchimp.com/" target="_blank" bgcolor="#000">
+          <a href="https://mailchimp.com/" target="_blank">
             <img src="https://pbs.twimg.com/profile_images/709825689181147136/SdVd6iit_400x400.jpg" alt="#" />
           </a>
         </div>
@@ -277,7 +292,7 @@
       
       <li>
         <div class="resource-icon">
-          <a href="https://trello.com" target="_blank" bgcolor="#000">
+          <a href="https://trello.com" target="_blank">
             <img src="https://pbs.twimg.com/profile_images/1018858130090782720/gkRswKNd_400x400.jpg" alt="#" />
           </a>
         </div>
