--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1764,6 +1764,25 @@
 				<a class="resource-button" href="https://www.dropbox.com/s/73c7z1umsr455af/Links.txt?dl=0" target="_blank">Veja</a>
 			</li>
 
+			<div id="cursos"></div>
+
+			<div class="linha"></div>
+			<h2 class="margen-titulo color-apoio">Cursos</h2>
+			<div class="linha"></div>
+			
+			<li>
+				<div class="resource-icon">
+					<a href="https://alison.com/courses" target="_blank">
+						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/21743340_1691981360836553_8867221493187452381_n.png?_nc_cat=0&oh=8764aaa00f70904fa248e59c29b8ec1c&oe=5C1F3A5B" alt="Cursos" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://alison.com/courses" target="_blank">Alison</a> </h2>
+					<p>Cursos Free</p>
+				</div>
+				<a class="resource-button" href="https://alison.com/courses" target="_blank">Veja</a>
+			</li>
+
 			<div id="atalhos"></div>
 
 			<div class="linha"></div>
@@ -1836,6 +1855,7 @@
 			<li><a class="scroll" href="#sons">Sound Effects</a></li>
 			<li><a class="scroll" href="#video">Vídeo</a></li>
 			<li><a class="scroll" href="#outros">Outros</a></li>
+			<li><a class="scroll" href="#cursos">Cursos</a></li>
 			<li><a class="scroll" href="#atalhos">Atalhos</a></li>
   	</ul>
 
