--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -534,6 +534,21 @@
         </div>
         <a class="resource-button" href="http://www.biblioteca.pucpr.br/pergamum/biblioteca/img.php?arquivo=/00006b/00006b0b.pdf" target="_blank">Veja</a>
       </li>
+    
+      <li>
+        <div class="resource-icon">
+          <a href="https://repositorio.unesp.br/bitstream/handle/11449/89742/valente_el_me_bauru.pdf?sequence=1" target="_blank">
+            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://repositorio.unesp.br/bitstream/handle/11449/89742/valente_el_me_bauru.pdf?sequence=1" target="_blank">Eunice Valente - Dissertação de Mestrado</a>
+          </h2>
+          <p><mark> <a href="http://lattes.cnpq.br/5391001752985434" target="_blank">Currículo Lattes</a></mark></p>
+        </div>
+        <a class="resource-button" href="https://repositorio.unesp.br/bitstream/handle/11449/89742/valente_el_me_bauru.pdf?sequence=1" target="_blank">Veja</a>
+      </li>
 
       
       </ul>
