link do currículo Lattes de Adriane de Paula Majczak Linhares

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -521,6 +521,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="http://lattes.cnpq.br/8542486657160866" target="_blank">
+            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://lattes.cnpq.br/8542486657160866" target="_blank">Adriane de Paula Majczak Linhares</a>
+          </h2>
+          <p>Currículo Lattes</p>
+        </div>
+        <a class="resource-button" href="http://lattes.cnpq.br/8542486657160866" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://www.facebook.com/claudio.silva.92560" target="_blank">
             <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
           </a>
