link da Dissertação de Mestrado de Michael Pizzatto Bahr

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -650,7 +650,7 @@
           <h2>
             <a href="http://lattes.cnpq.br/4024228122241936" target="_blank">Michael Pizzatto Bahr</a>
           </h2>
-          <p>Currículo Lattes</p>
+          <p>Currículo Lattes | <mark><a href="http://tede.utp.br:8080/jspui/bitstream/tede/1416/2/EL%20CHAVO%20DEL.pdf" target="_blank">Dissertação de Mestrado</a></mark></p>
         </div>
         <a class="resource-button" href="http://lattes.cnpq.br/4024228122241936" target="_blank">Veja</a>
       </li>
