--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -456,6 +456,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://99designs.com.br/blog/trends/graphic-design-trends-2018/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://99designs.com.br/blog/trends/graphic-design-trends-2018/" target="_blank">Graphic Design Trends 2018</a>
+          </h2>
+          <p>99 Designs</p>
+        </div>
+        <a class="resource-button" href="https://99designs.com.br/blog/trends/graphic-design-trends-2018/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://designcomcafe.com.br/manuais-de-identidade-visual-para-se-inspirar/" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
