--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -418,6 +418,21 @@ and share your amazing creations in a matter of minutes.</p>
         </div>
         <a class="resource-button" href="https://goodui.org/home.php" target="_blank">Veja</a>
       </li>      
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://theuxblog.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://theuxblog.com/" target="_blank">The UX Blog</a>
+          </h2>
+          <p>Blog</p>
+        </div>
+        <a class="resource-button" href="https://theuxblog.com/" target="_blank">Veja</a>
+      </li>      
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Tips &amp; Tricks</h2>
