--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -433,6 +433,36 @@ and share your amazing creations in a matter of minutes.</p>
         </div>
         <a class="resource-button" href="https://theuxblog.com/" target="_blank">Veja</a>
       </li>      
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://usabilitygeek.com/" target="_blank">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/1456709_543038692446114_1751168257_n.png?_nc_cat=0&oh=10cc95be963dd1d191de88b22b4a53ef&oe=5C35E9D7" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://usabilitygeek.com/" target="_blank">Usability Geek</a>
+          </h2>
+          <p>Blog</p>
+        </div>
+        <a class="resource-button" href="https://usabilitygeek.com/" target="_blank">Veja</a>
+      </li>      
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://theuxblog.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://theuxblog.com/" target="_blank">The UX Blog</a>
+          </h2>
+          <p>Blog</p>
+        </div>
+        <a class="resource-button" href="https://theuxblog.com/" target="_blank">Veja</a>
+      </li>      
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Tips &amp; Tricks</h2>
