--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -451,17 +451,17 @@ and share your amazing creations in a matter of minutes.</p>
       
       <li>
         <div class="resource-icon">
-          <a href="https://theuxblog.com/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+          <a href="https://uxmastery.com/" target="_blank">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/c7.0.320.320/p320x320/10445968_940408919350826_6743417754018838516_n.png?_nc_cat=0&oh=2ad2d1b1c8015176b2cfa59515425849&oe=5C237317" alt="#" />
           </a>
         </div>
         <div class="resource-details">
           <h2>
-            <a href="https://theuxblog.com/" target="_blank">The UX Blog</a>
+            <a href="https://uxmastery.com/" target="_blank">UX Mastery</a>
           </h2>
           <p>Blog</p>
         </div>
-        <a class="resource-button" href="https://theuxblog.com/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://uxmastery.com/" target="_blank">Veja</a>
       </li>      
 
       <div class="linha"></div>
