--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -220,6 +220,21 @@
         
       <li>
         <div class="resource-icon">
+          <a href="https://theblog.adobe.com/" target="_blank">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p480x480/26814452_1588906554497375_5273049988508376744_n.png?_nc_cat=1&oh=397ab1388682224a8f5fbc1dc8bfd5f3&oe=5C1C5F43" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://theblog.adobe.com/" target="_blank">Adobe Blog</a>
+          </h2>
+          <p>Blog internacional sobre Design</p>
+        </div>
+        <a class="resource-button" href="https://theblog.adobe.com/" target="_blank">Veja</a>   
+		  </li>
+        
+      <li>
+        <div class="resource-icon">
           <a href="http://naldzgraphics.net/" target="_blank">
             <img src="../../base/images/naldzygraphics.jpg" alt="#" />
           </a>
