--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#home" class="page-scroll">Home</a></li>
-        <li><a href="#services-section" class="page-scroll">ServiÇOS</a></li>
+        <li><a href="#services-section" class="page-scroll">Serviços</a></li>
         <li><a href="#works-section" class="page-scroll">Portfolio</a></li>
         <li><a href="#about-section" class="page-scroll">Sobre</a></li>
         <li><a href="#testimonials-section" class="page-scroll">Posts</a></li> 
