--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1092,6 +1092,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://browsersync.io/" target="_blank">
+            <img src="https://slack-files2.s3-us-west-2.amazonaws.com/avatars/2015-08-05/8673322417_fa920d5df43dfe0dc73c_132.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://browsersync.io/" target="_blank">Browser Sync</a>
+          </h2>
+          <p>Live Preview</p>
+        </div>
+        <a class="resource-button" href="https://browsersync.io/" target="_blank">Veja</a>
+  		</li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://www.styled-components.com/" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
