Ferramentas aplicadas em illustração digital

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -559,6 +559,22 @@
         </div>
         <a class="resource-button" href="http://tutano.trampos.co/12187-formato-imagem-usar-jpg-gif-png/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="http://www.alfamidia.com.br/ap1/Ilustracao_Digital.pdf" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.alfamidia.com.br/ap1/Ilustracao_Digital.pdf" target="_blank">Ferramentas aplicadas em
+Ilustração Digital</a>
+          </h2>
+          <p>Alfamídia</p>
+        </div>
+        <a class="resource-button" href="http://www.alfamidia.com.br/ap1/Ilustracao_Digital.pdf" target="_blank">Veja</a>
+      </li>
     
       <li>
         <div class="resource-icon">
