Problemas para converter cores na hora do projeto? Seus problemas acabaram!

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -575,6 +575,21 @@ Ilustração Digital</a>
         </div>
         <a class="resource-button" href="http://www.alfamidia.com.br/ap1/Ilustracao_Digital.pdf" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://designculture.com.br/acabe-seus-problemas-com-conversoes-de-cores/" target="_blank">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p200x200/23561593_1921177074564506_2198188356803910177_n.png?_nc_cat=0&oh=01b952c4efc94784d64a26f231dfcc71&oe=5C2E1FA5" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://designculture.com.br/acabe-seus-problemas-com-conversoes-de-cores/" target="_blank">Problemas para converter cores na hora do projeto? Seus problemas acabaram!</a>
+          </h2>
+          <p>Design Culture</p>
+        </div>
+        <a class="resource-button" href="https://designculture.com.br/acabe-seus-problemas-com-conversoes-de-cores/" target="_blank">Veja</a>
+      </li>
     
       <li>
         <div class="resource-icon">
