Heurísticas e Buzzwords de UX - Hipsters Ponto Tech

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -737,6 +737,26 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="http://www.mergo.com.br/" target="_blank">Veja</a>
       </li>
 
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-design">Estudo</h2>
+      <div class="linha"></div>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://hipsters.tech/heuristicas-e-buzzwords-em-ux-hipsters-14/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://hipsters.tech/heuristicas-e-buzzwords-em-ux-hipsters-14/" target="_blank">Heurísticas e Buzzwords de UX – Hipsters #14
+            </a>
+          </h2>
+          <p>Hipsters Ponto Tech</p>
+        </div>
+        <a class="resource-button" href="https://hipsters.tech/heuristicas-e-buzzwords-em-ux-hipsters-14/" target="_blank">Veja</a>
+      </li>
+
     </ul>
       <ul class="sidebar-navigation">
               <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
