--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1764,6 +1764,19 @@
 				<a class="resource-button" href="https://www.dropbox.com/s/73c7z1umsr455af/Links.txt?dl=0" target="_blank">Veja</a>
 			</li>
 
+			<li>
+				<div class="resource-icon">
+					<a href="https://search.creativecommons.org/" target="_blank">
+						<img src="https://pbs.twimg.com/profile_images/1429168434/cc_france_logo_400x400.jpeg" alt="My Favorites" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://search.creativecommons.org/" target="_blank">Creative Commons</a> </h2>
+					<p>Imagens, Vídeos e Músicas com licença gratuita</p>
+				</div>
+				<a class="resource-button" href="https://search.creativecommons.org/" target="_blank">Veja</a>
+			</li>
+
 			<div id="cursos"></div>
 
 			<div class="linha"></div>
