Multi Screen Resolution Test and Blisk browser

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -159,7 +159,6 @@
           <p>Serviço online para a criação de aplicações móveis com HTML, CSS e JS (Apache Cordova &amp; PhoneGap)</p>
         </div>
         <a class="resource-button" href="https://build.phonegap.com" target="_blank">Veja</a>
-        <div id="css"></div>
       </li>
 
       <li>
@@ -175,7 +174,6 @@
           <p>Alternativa para utilizar o javascript sem precisar do Jquery</p>
         </div>
         <a class="resource-button" href="http://youmightnotneedjquery.com/" target="_blank">Veja</a>
-        <div id="css"></div>
       </li> 
 
       <li>
@@ -191,6 +189,21 @@
           <p>A JavaScript library to load images progressively</p>
         </div>
         <a class="resource-button" href="https://thinker3197.github.io/progressively/" target="_blank">Veja</a>
+      </li> 
+
+      <li>
+        <div class="resource-icon">
+          <a href="http://whatismyscreenresolution.net/multi-screen-test" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="http://whatismyscreenresolution.net/multi-screen-test" target="_blank">Multi Screen Resolution Test</a>
+          </h2>
+          <p>Test your site at different screen resolutions & devices | Outra alternativa para testes é o navegador: <a href="https://blisk.io/" target="_blank"><mark>Blisk</a></mark></p>
+        </div>
+        <a class="resource-button" href="http://whatismyscreenresolution.net/multi-screen-test" target="_blank">Veja</a>
         <div id="css"></div>
       </li> 
 
