Currículo de Analise Gerceski

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -627,6 +627,21 @@ Ilustração Digital</a>
 
       <li>
         <div class="resource-icon">
+          <a href="https://www.escavador.com/sobre/3742162/anelise-bittencourt-gerceski" target="_blank">
+            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.escavador.com/sobre/3742162/anelise-bittencourt-gerceski" target="_blank">Anelise Bittencourt Gerceski</a>
+          </h2>
+          <p>Currículo Escavador | <a href="http://uniqueconvites.com.br/" target="_blank"><mark>Unique Convites D.O.C - Site</mark></a> | <a href="http://studiounique.blogspot.com/" target="_blank"><mark>Unique Convites D.O.C - Blogspot</mark></a> | <a href="https://www.facebook.com/UniqueConvites/" target="_blank"><mark>Unique Convites D.O.C - Facebook</mark></a> </p>
+        </div>
+        <a class="resource-button" href="https://www.escavador.com/sobre/3742162/anelise-bittencourt-gerceski" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://www.facebook.com/claudio.silva.92560" target="_blank">
             <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4282913E6" alt="#" />
           </a>
