3 Livros essenciais para começar a entender de marketing

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -255,6 +255,21 @@
         </div>
         <a class="resource-button" href="email-marketing.html">Veja</a>
       </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://designculture.com.br/3-livros-essenciais-para-comecar-a-entender-de-marketing/" target="_blank">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/23561593_1921177074564506_2198188356803910177_n.png?_nc_cat=0&oh=5051c85fa37b62db7ec59f28cf1a8284&oe=5C14E40E" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://designculture.com.br/3-livros-essenciais-para-comecar-a-entender-de-marketing/" target="_blank">3 livros essenciais para começar a entender de marketing</a>
+          </h2>
+          <p>Design Culture</p>
+        </div>
+        <a class="resource-button" href="https://designculture.com.br/3-livros-essenciais-para-comecar-a-entender-de-marketing/" target="_blank">Veja</a>
+      </li>
     
     <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Ferramentas</h2>        
