Dev Hints - Uma coleção de snippets e exemplos de código para muitas linguagens de programação

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -995,6 +995,21 @@
       
       <li>
         <div class="resource-icon">
+          <a href="https://devhints.io/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://devhints.io/" target="_blank">Dev Hints</a>
+          </h2>
+          <p>Uma coleção de snippets e exemplos de código para muitas linguagens de programação</p>
+        </div>
+        <a class="resource-button" href="https://devhints.io/" target="_blank">Veja</a>
+      </li>
+      
+      <li>
+        <div class="resource-icon">
           <a href="https://git-scm.com/docs" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
