--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -248,6 +248,36 @@ and share your amazing creations in a matter of minutes.</p>
 
       <li>
         <div class="resource-icon">
+          <a href="https://www.flinto.com/" target="_blank">
+            <img src="https://cdn.dribbble.com/users/1320023/avatars/small/bf2dd88bdd900f30c19dad34d10cf02c.png?1507745995" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.flinto.com/" target="_blank">Flinto</a>
+          </h2>
+          <p>Create interactive and animated prototypes of their app designs (Somente para MacOS)</p>
+        </div>
+        <a class="resource-button" href="https://www.flinto.com/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://framer.com/" target="_blank">
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/35282540_985848591571651_1114989551744450560_n.jpg?_nc_cat=0&oh=22cf1ec14c09011bbafa19e098e1cb7f&oe=5C1772F3" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://framer.com/" target="_blank">Framer X</a>
+          </h2>
+          <p>Framer X has all the features you need to draw everything from custom icons to intricate illustrations. Fine-tune your designs with our advanced path editor, export anything from your canvas, and more. (Somente para MacOS)</p>
+        </div>
+        <a class="resource-button" href="https://framer.com/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://maze.design/" target="_blank">
             <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/31165840_355665734925368_3369729425162633216_n.png?_nc_cat=0&oh=52ffb39af049df878e0e1885e37bc8a5&oe=5C1DFB9E" alt="#" />
           </a>
