--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1165,6 +1165,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://devpen.io/editor" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://devpen.io/editor" target="_blank">Devpen</a>
+          </h2>
+          <p>A web-based application to write Markdown with Github styles. A quite handy tool to write your project README and how it will look before actually pushing it to Github</p>
+        </div>
+        <a class="resource-button" href="https://devpen.io/editor" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://github.com/afarkas/html5shiv" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
