--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -233,6 +233,21 @@ and share your amazing creations in a matter of minutes.</p>
 
       <li>
         <div class="resource-icon">
+          <a href="https://gridprint.in/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://gridprint.in/" target="_blank">Grid Print</a>
+          </h2>
+          <p>Simple design, prototyping and collaboration | Outra Alternativa: <mark><a href="https://www.mockplus.com/blog/post/mockplus-rapid-prototyping-tutorial-30-seconds-prototyping-with-mockplus" target="_blank">Mockuplus</a></mark></p>
+        </div>
+        <a class="resource-button" href="https://gridprint.in/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://marvelapp.com/" target="_blank">
             <img src="../../base/images/marvelapp.jpg" alt="#" />
           </a>
