Grid Print - Description

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -241,7 +241,7 @@ and share your amazing creations in a matter of minutes.</p>
           <h2>
             <a href="https://gridprint.in/" target="_blank">Grid Print</a>
           </h2>
-          <p>Simple design, prototyping and collaboration | Outra Alternativa: <mark><a href="https://www.mockplus.com/blog/post/mockplus-rapid-prototyping-tutorial-30-seconds-prototyping-with-mockplus" target="_blank">Mockuplus</a></mark></p>
+          <p>Free baseline grids for paper prototyping of your projects</p>
         </div>
         <a class="resource-button" href="https://gridprint.in/" target="_blank">Veja</a>
       </li>
