--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -207,6 +207,22 @@
         <div id="css"></div>
       </li> 
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://gist.github.com/bartholomej/8415655" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://gist.github.com/bartholomej/8415655" target="_blank">CSS Media Query Cheat Sheet </a>
+          </h2>
+          <p>CSS Grid</p>
+        </div>
+        <a class="resource-button" href="https://gist.github.com/bartholomej/8415655" target="_blank">Veja</a>
+        <div id="css"></div>
+      </li> 
+
       <div class="linha"></div>        
       <h2 class="margen-titulo color-frontend">CSS</h2>
       <div class="linha"></div>      
